<resources>
    <string name="app_name">FurorTask</string>
    <string name="todo">TODO</string>
    <string name="id">id:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="cost">Cost</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="fill_the_form">Fill the form</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="connection_lost_to_make_changes_go_online">Connection lost. To make changes go online</string>
</resources>